--- a/docs/main.css
+++ b/docs/main.css
@@ -3,8 +3,10 @@
 	animation-duration: 3s;
 	animation-iteration-count: infinite;
 	animation-timing-function: ease-in-out;
-	margin-left: 30px;
-	margin-top: 5px;
+    position: fixed;
+    top:-100%; right:-100%; left:-100%; bottom:-100%;
+    margin:auto;
+    z-index:0;
 }
 
 @keyframes floating {
