--- a/docs/main.css
+++ b/docs/main.css
@@ -35,6 +35,7 @@ body {
    color: white;
    position: relative;
    top: 100px;
+   background-color: rgba(0, 0, 0, 0);
 
 }
 
@@ -45,7 +46,7 @@ body {
    height: 30px;
    width: 100%;
    color: white;
-   background-color: black;
+   background-color: rgba(0, 0, 0, 0);
 }
 
 .socials {
@@ -55,10 +56,29 @@ body {
    height: 20px;
    width: 100%;
    color: white;
-   background-color: black;
+   background-color: rgba(0, 0, 0, 0);
 }
 
 .page {
-   background-color:black; 
+   background-color: rgba(0, 0, 0, 0);
    font-family: comfortaaRegular
+}
+
+#particles-js canvas {
+    display: block;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
+    transition: opacity .8s ease, transform 1.4s ease
+}
+
+#particles-js {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -10;
+    top: 0;
+    left: 0
 }
