fixing that issue with fonts

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
    font-family: "comfortaaRegular";
-   src: url("./assets/fonts/comfortaa/Comfortaa-Regular.ttf");
+   src: url("../fonts/comfortaa/Comfortaa-Regular.ttf");
 }
 
 @import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
