--- a/docs/assets/css/abt.css
+++ b/docs/assets/css/abt.css
@@ -35,13 +35,14 @@ body {
 
 
 .copyright {
-   position: fixed;
-   left: 0px;
-   bottom: 20px;
-   height: 30px;
-   width: 100%;
-   color: white;
-   background-color: rgba(0, 0, 0, 0);
+  position: fixed;
+  left: 0px;
+  bottom: 20px;
+  height: 30px;
+  width: 100%;
+  color: white;
+  background-color: rgba(0, 0, 0, 0);
+  font-size: 18px
 }
 
 .socials {
