--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -38,6 +38,7 @@ body {
    width: 100%;
    color: white;
    background-color: rgba(0, 0, 0, 0);
+   font-size: 18px
 }
 
 .socials {
@@ -117,3 +118,26 @@ body {
      opacity:1;
    }
  }
+
+ .rainbow {
+  text-align: center;
+  text-decoration: underline;
+}
+.rainbow_text_animated {
+  background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  animation: rainbow_animation 6s ease-in-out infinite;
+  background-size: 400% 100%;
+}
+
+@keyframes rainbow_animation {
+  0%,100% {
+      background-position: 0 0;
+  }
+
+  50% {
+      background-position: 100% 0;
+  }
+}
